fix: spacing variables

--- a/src/styles/amino.css
+++ b/src/styles/amino.css
@@ -163,5 +163,5 @@ h6 {
 .toasts-wrapper {
   position: fixed;
   z-index: 9999999;
-  bottom: var(--amino-space-double);
+  bottom: var(--amino-space-40);
 }
